gateway-service/server/src/main/resources/gateway-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: my-service
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gateway-service
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: gateway-service
    spec:
      serviceAccountName: app-read
      containers:
        - name: gateway-service
          image: my-registry:5000/gateway-server:dev.latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          #        resources:
          #          requests:
          #            memory: 500MI # GI
          #            cpu: 100m # m 一核心 = 1000m
          #          limits:
          #            memory: 100MI
          #            cpu: 200m
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: app-log
              mountPath: /logs
            - name: sw-agent
              mountPath: /usr/skywalking/agent
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: app-log
          emptyDir: {}
        - name: sw-agent
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: my-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    k8s-app: gateway-service
