gateway-service/server/src/main/resources/gateway-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: my-service
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gateway-service
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: gateway-service
    spec:
#      serviceAccount: yc-app
      serviceAccountName: app-read
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
#      - name: sw-agent
#        emptyDir: {}
#      initContainers:
#        - image: my-registry:5000/skywalking-agent:6.5.0
#          name: sidecar
#          imagePullPolicy: IfNotPresent
#          command: ['sh']
#          args: ['-c','mkdir -p /skywalking/agent && cp -r /usr/skywalking/agent/* /skywalking/agent']
#          volumeMounts:
#            - mountPath: /skywalking/agent
#              name: sw-agent
      containers:
      - name: gateway-service
        image: my-registry:5000/gateway-server:master.latest
        imagePullPolicy: Always
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
#        - name: sw-agent
#          mountPath: /usr/skywalking/agent
#        - name: log
#          mountPath: /logs
        ports:
        - containerPort: 8080
#        resources:
#          requests:
#            memory: 500MI # GI
#            cpu: 100m # m 一核心 = 1000m
#          limits:
#            memory: 100MI
#            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: my-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    k8s-app: gateway-service

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-service
  namespace: my-service
spec:
  rules:
    - host: jwell.gateway.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-service
              servicePort: 80
